# wasm-minimal-protocol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  b.wasm
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  wasi-stub-release.yml  wasm-minimal-protocol-release.yml
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/macro/tests/: test.rs
crates/wasi-stub/: Cargo.toml  README.md
crates/wasi-stub/src/: lib.rs  main.rs  parse_args.rs
examples/hello_c/: README.md
examples/hello_go/: README.md  go.mod  hello.typ
examples/hello_haskell/: .gitignore  Main.hs  README.md  build.bat  build.sh  hello.typ  replace_wasi.py  typ_wrapper.c
examples/hello_moonbit/: .gitignore  README.md  hello.mbt  hello.typ  moon.mod  moon.mod.json  moon.pkg.json
examples/hello_rust/: README.md  hello.typ
examples/hello_zig/: README.md
