[package]
name = "wasi-stub"
edition = "2024"
version = "0.3.0"
authors = ["Arnaud Golfouse <arnaud.golfouse@laposte.net>"]
license-file = "../../LICENSE"
description = "Detect all WASI-related imports in a WebAssembly file, and replace them with stubs that do nothing"
repository = "https://github.com/typst-community/wasm-minimal-protocol"

[dependencies]
wast = "244.0"
wasmprinter = "0.244"

[package.metadata.binstall]
# cargo-binstall's default template does not recognize our tag names.
pkg-url = "{ repo }/releases/download/wasi-stub-{ version }/{ name }-{ target }{ archive-suffix }"
